manifests/unfinished/jenkins.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    run: jenkins
  name: jenkins
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      run: jenkins
  template:
    metadata:
      labels:
        run: jenkins
    spec:
      containers:
        - image: dahrkael/jenkins-armv7:latest
          imagePullPolicy: Always
          name: jenkins
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
            - containerPort: 50000
              protocol: TCP
              name: slaves
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/json
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 20
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkinshome
            - mountPath: /usr/share/jenkins/ref
              name: ref-volume
      volumes:
        - name: ref-volume
          emptyDir: {}
        - name: jenkinshome
          persistentVolumeClaim:
            claimName: jenkins
        - name: config
          configMap:
            name: jenkins-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: jenkins
  name: jenkins
  namespace: devops
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: slaves
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    run: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
spec:
  rules:
    - host: jenkins.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
